force-app/main/default/objects/ERP_Integration_Setting__mdt/fields/Log_Retention_Days__c.field-meta.xml
<CustomField>
    <fullName>Log_Retention_Days__c</fullName>
    <label>Log Retention (days)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>