force-app/main/default/objects/ERP_Integration_Setting__mdt/fields/Orders_Path__c.field-meta.xml
<CustomField>
    <fullName>Orders_Path__c</fullName>
    <label>Orders Path</label>
    <length>120</length>
    <type>Text</type>
</CustomField>