force-app/main/default/objects/ERP_Integration_Setting__mdt/fields/Retry_Base_Delay_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Retry_Base_Delay_Minutes__c</fullName>
    <label>Retry Base Delay (min)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>